--- a/package.json
+++ b/package.json
@@ -6,11 +6,16 @@
         "build": "vite build"
     },
     "devDependencies": {
-        "axios": "^1.6.4",
+        "axios": "^1.6.7",
         "laravel-vite-plugin": "^1.0.0",
         "vite": "^5.0.0"
     },
     "dependencies": {
-        "bootstrap": "^5.3.3"
+        "@fortawesome/fontawesome-free": "^6.5.1",
+        "@vitejs/plugin-vue": "^5.0.4",
+        "bootstrap": "^5.3.3",
+        "vue": "^3.4.21",
+        "vue-loader": "^17.4.2",
+        "vue-router": "^4.3.0"
     }
 }
